# plugin_TiffImage

./: CMakeLists.txt  README.md  ijk_plugin.cpp  multilayer_raster.hpp  pyproject.toml  setup.cfg  tiff_image_data.h  tiff_image_data_impl.h  tiff_plugin.cpp
.github/workflows/: sdist.yml  wheels.yml
example/: image_data.lua
neura2/: CImagePrOp.h  TODO  c3dimage.cpp  c3dimage.h  c3dimage_tiff.cpp  cimage.h  constants.h  csubimage.h
sample/: image_data.lua
src/: element_user_data.hpp  ijk_plugin.cpp  ijk_plugin.hpp  ijk_plugin_pybind.cpp  multilayer_raster.hpp  py_element_user_data.hpp  tiff_image_data.h  tiff_image_data_impl.h
src/neura2/: CImagePrOp.h  TODO  c3dimage.h  cimage.h  constants.h  csubimage.h
tiffsample/: image_data.lua
